# sill

./: Cargo.toml  build.rs  task.psm1
.cargo/: config.toml
examples/: events.rs  message-only.rs  window.rs
sill/: Cargo.toml
sill/examples/: app.rs  builder.rs  default.rs  events.rs  manager.rs  message-only.rs
sill/src/: lib.rs  main.rs  window.rs
sill/src/app/: mod.rs
sill/src/window/: builder.rs  event.rs  manager.rs  mod.rs
src/: app.rs  lib.rs  macros.rs  window.rs
src/window/: builder.rs
tools/: Cargo.toml
tools/src/: lib.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
