[workspace]
members = ["xtask", "tools"]

[workspace.dependencies]
windows = { version = "0.58.0" }

[package]
name = "sill"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
windows = { workspace = true, features = [
    "UI_ViewManagement",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_Urlmon",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tools = { path = "tools" }
