[package]
name = "sill"
version = "0.0.0"
authors = ["Mike Thierman"]
edition = "2021"
description = "Windowing library"
homepage = "https://github.com/mthierman/sill"
repository = "https://github.com/mthierman/sill"
publish = false
default-run = "sill"

[dependencies]
windows = { workspace = true, features = [
    "UI_ViewManagement",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_Urlmon",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
tools = { path = "../tools" }
