[package]
name = "sill"
version = "0.0.0"
edition = "2024"
description = "Windowing library"
homepage = "https://github.com/mthierman/sill"
repository = "https://github.com/mthierman/sill"
publish = false
default-run = "sill"

[dependencies]
windows = { workspace = true, features = [
  "UI_ViewManagement",
  "Win32_Graphics_Gdi",
  "Win32_System_Com_Urlmon",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tools = { path = "../tools" }
